--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
@@ -33,6 +36,7 @@
     "@storybook/test": "^8.0.9",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
