--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.0",
+    "react-kofi-button": "^0.7.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
@@ -41,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-kofi-button": "^0.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
@@ -49,6 +51,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "sass": "^1.76.0",
     "storybook": "^8.0.9",
     "ts-node": "^10.9.2",
     "typescript": "^5"
