--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.1.7",
-    "next": "14.2.3",
+    "next": "^14.3.0-canary.39",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
