--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
+    "gray-matter": "^4.0.3",
     "next": "^14.3.0-canary.39",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.0",
-    "react-kofi-button": "^0.7.1"
+    "react-kofi-button": "^0.7.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
